--- a/source/Jobbr.ComponentModel.ArtefactStorage.nuspec
+++ b/source/Jobbr.ComponentModel.ArtefactStorage.nuspec
@@ -13,7 +13,12 @@
     <iconUrl>https://raw.githubusercontent.com/jobbrIO/artwork/master/build/icons/icon_addon_256_dark.png</iconUrl>
   </metadata>
   <files>
-    <file src="Jobbr.ComponentModel.ArtefactStorage/bin/Release/Jobbr.ComponentModel.ArtefactStorage.dll" target="lib\net462"/>
-    <file src="Jobbr.ComponentModel.ArtefactStorage/bin/Release/Jobbr.ComponentModel.ArtefactStorage.pdb" target="lib\net462"/>
+    <!-- .NET Framework 4.6.2 -->
+    <file src="Jobbr.ComponentModel.ArtefactStorage/bin/Release/net462/Jobbr.ComponentModel.ArtefactStorage.dll" target="lib\net462"/>
+    <file src="Jobbr.ComponentModel.ArtefactStorage/bin/Release/net462/Jobbr.ComponentModel.ArtefactStorage.pdb" target="lib\net462"/>
+    
+    <!-- .NET Standard 2.0 -->
+    <file src="Jobbr.ComponentModel.ArtefactStorage/bin/Release/netstandard2.0/Jobbr.ComponentModel.ArtefactStorage.dll" target="lib\netstandard2.0"/>
+    <file src="Jobbr.ComponentModel.ArtefactStorage/bin/Release/netstandard2.0/Jobbr.ComponentModel.ArtefactStorage.pdb" target="lib\netstandard2.0"/>
   </files>
 </package>
