--- a/source/Jobbr.ComponentModel.ArtefactStorage.nuspec
+++ b/source/Jobbr.ComponentModel.ArtefactStorage.nuspec
@@ -1,19 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
+<package>
   <metadata>
     <id>Jobbr.ComponentModel.ArtefactStorage</id>
     <version>$version$</version>
     <authors>Jobbr</authors>
     <owners>Jobbr</owners>
     <projectUrl>http://github.com/jobbrIO/jobbr-cm-artefactstorage</projectUrl>
-    <licenseUrl>https://raw.githubusercontent.com/jobbrIO/jobbr-cm-artefactstorage/develop/LICENSE</licenseUrl>
+    <license type="expression">GPL-3.0-only</license>
     <requireLicenseAcceptance>true</requireLicenseAcceptance>
-    <copyright>Copyright 2017</copyright>
+    <copyright>Copyright 2022</copyright>
     <description>Component Models for implementing JobStorage-Providers</description>
-    <iconUrl>https://raw.githubusercontent.com/jobbrIO/artwork/master/build/icons/icon_addon_256_dark.png</iconUrl>
+    <icon>images\icon.png</icon>
   </metadata>
   <files>
     <file src="Jobbr.ComponentModel.ArtefactStorage/bin/Release/netstandard2.0/Jobbr.ComponentModel.ArtefactStorage.dll" target="lib\netstandard20"/>
     <file src="Jobbr.ComponentModel.ArtefactStorage/bin/Release/netstandard2.0/Jobbr.ComponentModel.ArtefactStorage.pdb" target="lib\netstandard20"/>
+    <file src="icon.png" target="images/"/>
   </files>
 </package>
